Add 'categoria' attribute to TransacaoEntity and update related services
- Introduced a new 'categoria' field in TransacaoEntity with a maximum length of 100 characters.
- Updated FinanceiroInternoService to handle the new 'categoria' field in transaction processing.
- Refactored various services to ensure consistent package naming conventions.
- Enhanced transaction handling in V1TransacaoService and V1ContratoService to accommodate new business logic.
- Improved data handling in V1DashboardService and V1RelatorioService for better financial reporting.