@@ -1,4 +1,4 @@
-package softwave.backend.backend_mobile.service;
+package softwave.backend.backend_mobile.Service;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -24,7 +24,10 @@ import softwave.backend.backend_mobile.Repository.TransacaoSpecifications;
 import softwave.backend.backend_mobile.Repository.UsuarioRepository;
 import softwave.backend.backend_mobile.Repository.StatusHistoricoRepository;
 import softwave.backend.backend_mobile.security.JwtPrincipalExtractor;
+import softwave.backend.backend_mobile.Service.LocalStorageService;
+import softwave.backend.backend_mobile.Service.StatusHistoricoService;
 import softwave.backend.backend_mobile.util.MoneyUtil;
+import softwave.backend.backend_mobile.util.TransacaoFinanceiroRules;
 import softwave.backend.backend_mobile.v1.dto.TransacaoCreateRequest;
 
 import java.io.IOException;
@@ -73,13 +76,13 @@ public class V1TransacaoService {
     }
 
     @Transactional(readOnly = true)
-    public List<Map<String, Object>> listar(
+    public Map<String, Object> listar(
             Jwt jwt,
             String tipo,
             String status,
-            String busca,
             LocalDate dataInicio,
             LocalDate dataFim,
+            Integer periodoDias,
             int page,
             int limit
     ) {
@@ -94,21 +97,39 @@ public class V1TransacaoService {
             }
         } else {
             if (pids.isEmpty()) {
-                return List.of();
+                Map<String, Object> envelopeVazio = new LinkedHashMap<>();
+                envelopeVazio.put("transacoes", List.of());
+                envelopeVazio.put("page", 1);
+                envelopeVazio.put("pageSize", 0);
+                envelopeVazio.put("total", 0L);
+                envelopeVazio.put("totalPages", 0);
+                return envelopeVazio;
             }
             acessoSpec = TransacaoSpecifications.processoEm(pids);
+        }
+        LocalDate fimEfetiva = dataFim;
+        LocalDate inicioEfetiva = dataInicio;
+        if (periodoDias != null && periodoDias > 0 && inicioEfetiva == null && fimEfetiva == null) {
+            fimEfetiva = LocalDate.now();
+            inicioEfetiva = fimEfetiva.minusDays(periodoDias.longValue());
         }
         Specification<TransacaoEntity> spec = acessoSpec
                 .and(TransacaoSpecifications.tipoReceitaOuDespesa(tipo))
                 .and(TransacaoSpecifications.statusFinanceiroOuAprovacao(status))
-                .and(TransacaoSpecifications.buscaTituloOuCliente(busca))
-                .and(TransacaoSpecifications.dataEmissaoEntre(dataInicio, dataFim));
+                .and(TransacaoSpecifications.dataEmissaoEntre(inicioEfetiva, fimEfetiva));
 
         Page<TransacaoEntity> result = transacaoRepository.findAll(
                 spec,
-                PageRequest.of(Math.max(0, page - 1), Math.max(1, Math.min(limit, 100)), Sort.by(Sort.Direction.DESC, "dataEmissao"))
+                PageRequest.of(Math.max(0, page - 1), Math.clamp(limit, 1, 100), Sort.by(Sort.Direction.DESC, "dataEmissao"))
         );
-        return result.getContent().stream().map(this::paraListaItem).toList();
+        List<Map<String, Object>> transacoes = result.getContent().stream().map(this::paraListaItem).toList();
+        Map<String, Object> envelope = new LinkedHashMap<>();
+        envelope.put("transacoes", transacoes);
+        envelope.put("page", result.getNumber() + 1);
+        envelope.put("pageSize", result.getSize());
+        envelope.put("total", result.getTotalElements());
+        envelope.put("totalPages", result.getTotalPages());
+        return envelope;
     }
 
     @Transactional(readOnly = true)
@@ -140,6 +161,7 @@ public class V1TransacaoService {
         } else if (req.processoId() != null) {
             int pid = req.processoId();
             processoAccessService.garantirAcessoAoProcesso(uid, jwt, pid);
+            validarClienteVinculadoAoProcesso(req.clienteId(), pid);
             ProcessoEntity p = processoRepository.findById(pid).orElseThrow(() -> new NotFoundException("Processo não encontrado"));
             h = novoHonorarioParaProcesso(p, req);
             honorarioRepository.save(h);
@@ -148,11 +170,17 @@ public class V1TransacaoService {
                     "Informe honorarioId, processoId, ou semProcesso=true para lançamento sem processo vinculado");
         }
 
-        TransacaoEntity t = new TransacaoEntity();
-        t.setHonorario(h);
-        aplicarCreate(t, req);
-        transacaoRepository.save(t);
-        return Map.of("id", "txn_" + t.getId(), "mensagem", "Transação criada com sucesso.");
+        int quantidadeParcelas = (req.duracaoMeses() != null && req.duracaoMeses() > 1) ? req.duracaoMeses() : 1;
+        List<TransacaoEntity> criadas = criarTransacoesParceladas(h, req, quantidadeParcelas);
+        if (criadas.isEmpty()) {
+            throw new IllegalStateException("Falha ao criar transações parceladas.");
+        }
+        return Map.of(
+                "id", "txn_" + criadas.get(0).getId(),
+                "mensagem", quantidadeParcelas > 1
+                        ? "Transações parceladas criadas com sucesso."
+                        : "Transação criada com sucesso."
+        );
     }
 
     private HonorarioEntity novoHonorarioAvulso(int advogadoUsuarioId, TransacaoCreateRequest req) {
@@ -209,13 +237,43 @@ public class V1TransacaoService {
             String novo = campos.get("status").toString();
             String anterior = t.getStatusFinanceiro();
             t.setStatusFinanceiro(novo);
+            if ("pago".equalsIgnoreCase(novo)) {
+                t.setDataPagamento(LocalDate.now());
+            } else {
+                t.setDataPagamento(null);
+            }
             statusHistoricoService.registrar(t, anterior, novo, JwtPrincipalExtractor.userId(jwt), "Atualização parcial");
         }
         if (campos.containsKey("descricao")) {
             t.setDescricao(Objects.toString(campos.get("descricao"), null));
+            t.setTitulo(Objects.toString(campos.get("descricao"), null));
         }
         if (campos.containsKey("vencimento")) {
             t.setDataVencimento(LocalDate.parse(campos.get("vencimento").toString()));
+        }
+        if (campos.containsKey("tipo")) {
+            t.setTipo(Objects.toString(campos.get("tipo"), t.getTipo()));
+        }
+        if (campos.containsKey("categoria")) {
+            t.setCategoria(Objects.toString(campos.get("categoria"), t.getCategoria()));
+        }
+        if (campos.containsKey("data")) {
+            t.setDataEmissao(LocalDate.parse(campos.get("data").toString()));
+        }
+        if (campos.containsKey("clienteId")) {
+            Object cidObj = campos.get("clienteId");
+            if (cidObj != null) {
+                String cidStr = cidObj.toString();
+                if (cidStr.startsWith("cli_")) {
+                    cidStr = cidStr.substring(4);
+                }
+                try {
+                    Integer cid = Integer.parseInt(cidStr);
+                    usuarioRepository.findById(cid).ifPresent(u -> t.setContraparte(u.getNome()));
+                } catch (NumberFormatException ignored) {
+                    // ignora cliente inválido e mantém contraparte atual.
+                }
+            }
         }
         transacaoRepository.save(t);
         return Map.of("mensagem", "Transação atualizada com sucesso.");
@@ -228,6 +286,8 @@ public class V1TransacaoService {
         t.setStatusFinanceiro(novoStatus);
         if ("pago".equalsIgnoreCase(novoStatus)) {
             t.setDataPagamento(LocalDate.now());
+        } else {
+            t.setDataPagamento(null);
         }
         transacaoRepository.save(t);
         statusHistoricoService.registrar(t, anterior, novoStatus, JwtPrincipalExtractor.userId(jwt), "Atualização de status");
@@ -240,7 +300,9 @@ public class V1TransacaoService {
         // Remove dependências explícitas para evitar violação de FK (histórico/comprovante).
         statusHistoricoRepository.deleteByTransacao_Id(t.getId());
         comprovanteRepository.deleteByTransacao_Id(t.getId());
+        HonorarioEntity h = t.getHonorario();
         transacaoRepository.delete(t);
+        removerHonorarioSeSemTransacoes(h);
         return Map.of("mensagem", "Transação excluída com sucesso.");
     }
 
@@ -267,16 +329,52 @@ public class V1TransacaoService {
             t.setValor(MoneyUtil.fromCentavos(req.valor()));
         }
         t.setTipo(req.tipo() != null ? req.tipo() : "receita");
+        t.setCategoria(req.categoria());
         t.setDescricao(req.descricao() != null ? req.descricao() : req.titulo());
         t.setDataEmissao(req.data() != null ? req.data() : LocalDate.now());
         t.setDataVencimento(req.vencimento());
         t.setStatusFinanceiro(req.status() != null ? req.status() : "pendente");
         t.setStatusAprovacao("aprovado");
+        if (TransacaoFinanceiroRules.estaPago(t)) {
+            t.setDataPagamento(t.getDataPagamento() != null ? t.getDataPagamento() : LocalDate.now());
+        } else {
+            t.setDataPagamento(null);
+        }
         if (req.clienteId() != null) {
             usuarioRepository.findById(req.clienteId()).ifPresent(u -> t.setContraparte(u.getNome()));
         } else if (req.contraparte() != null && !req.contraparte().isBlank()) {
             t.setContraparte(req.contraparte().trim());
         }
+    }
+
+    private List<TransacaoEntity> criarTransacoesParceladas(HonorarioEntity honorario, TransacaoCreateRequest req, int quantidadeParcelas) {
+        if (req.valor() == null || req.valor() <= 0) {
+            throw new IllegalArgumentException("Valor total deve ser informado para criar transação.");
+        }
+        long totalCentavos = req.valor();
+        long base = totalCentavos / quantidadeParcelas;
+        long resto = totalCentavos % quantidadeParcelas;
+        LocalDate dataBase = req.data() != null ? req.data() : LocalDate.now();
+        LocalDate vencimentoBase = req.vencimento() != null ? req.vencimento() : dataBase;
+
+        List<TransacaoEntity> criadas = new ArrayList<>();
+        for (int i = 0; i < quantidadeParcelas; i++) {
+            long valorParcela = base + (i < resto ? 1 : 0);
+            TransacaoEntity t = new TransacaoEntity();
+            t.setHonorario(honorario);
+            aplicarCreate(t, req);
+            t.setValor(MoneyUtil.fromCentavos(valorParcela));
+            t.setDataEmissao(dataBase.plusMonths(i));
+            t.setDataVencimento(vencimentoBase.plusMonths(i));
+            if (quantidadeParcelas > 1) {
+                String tituloBase = t.getTitulo() != null && !t.getTitulo().isBlank() ? t.getTitulo() : "Parcela";
+                String tituloParcela = tituloBase + " (" + (i + 1) + "/" + quantidadeParcelas + ")";
+                t.setTitulo(tituloParcela.length() > 150 ? tituloParcela.substring(0, 150) : tituloParcela);
+            }
+            transacaoRepository.save(t);
+            criadas.add(t);
+        }
+        return criadas;
     }
 
     private Map<String, Object> paraListaItem(TransacaoEntity t) {
@@ -287,7 +385,7 @@ public class V1TransacaoService {
         m.put("valor", MoneyUtil.toCentavos(MoneyUtil.toBigDecimalOrZero(t.getValor())));
         m.put("tipo", t.getTipo());
         m.put("status", t.getStatusFinanceiro());
-        m.put("categoria", "honorarios");
+        m.put("categoria", TransacaoFinanceiroRules.categoriaOrDefault(t));
         HonorarioEntity h = t.getHonorario();
         if (h != null && h.getProcesso() != null) {
             m.put("processoId", "proc_" + h.getProcesso().getId());
@@ -326,6 +424,26 @@ public class V1TransacaoService {
         m.put("criadoEm", LocalDate.now().atStartOfDay().format(DateTimeFormatter.ISO_DATE_TIME));
         m.put("atualizadoEm", LocalDate.now().atStartOfDay().format(DateTimeFormatter.ISO_DATE_TIME));
         return m;
+    }
+
+    private void validarClienteVinculadoAoProcesso(Integer clienteId, Integer processoId) {
+        if (clienteId == null || processoId == null) {
+            return;
+        }
+        boolean vinculado = usuarioProcessoRepository.existsByIdUsuarioIdAndIdProcessoId(clienteId, processoId);
+        if (!vinculado) {
+            throw new IllegalArgumentException("Cliente informado não está vinculado ao processo selecionado.");
+        }
+    }
+
+    private void removerHonorarioSeSemTransacoes(HonorarioEntity honorario) {
+        if (honorario == null) {
+            return;
+        }
+        List<TransacaoEntity> restantes = transacaoRepository.findByHonorario_IdOrderByDataEmissaoAsc(honorario.getId());
+        if (restantes.isEmpty()) {
+            honorarioRepository.delete(honorario);
+        }
     }
 
     private TransacaoEntity carregarComAcesso(Jwt jwt, String idStr) {
